@@ -1,4 +1,4 @@
-FLAGS := $(AM_CPPFLAGS) $(BOOST_CPPFLAGS) $(YAMLCPP_CPPFLAGS) $(AM_LDFLAGS) $(BOOST_LDFLAGS) $(YAMLCPP_LDFLAGS) -L$(top_srcdir)/src -lLHAPDF $(BOOST_LIBS) $(YAMLCPP_LIBS)
+FLAGS = $(AM_CPPFLAGS) $(BOOST_CPPFLAGS) $(YAMLCPP_CPPFLAGS) $(AM_LDFLAGS) $(BOOST_LDFLAGS) $(YAMLCPP_LDFLAGS) -L$(top_srcdir)/src -lLHAPDF $(BOOST_LIBS) $(YAMLCPP_LIBS)
 
 testalphas: testalphas.cc
 	$(CXX) testalphas.cc $(FLAGS) -o testalphas
