@@ -1,0 +1,23 @@
+#! /usr/bin/env python
+
+import os
+from distutils.core import setup
+from glob import glob
+from distutils.extension import Extension
+from Cython.Distutils import build_ext
+
+incdir_src = os.path.abspath('@top_srcdir@/include')
+incdir_build = os.path.abspath('@top_builddir@/include')
+libdir = os.path.abspath('@top_builddir@/src/.libs')
+
+ext = Extension("lhapdf",
+                ["lhapdf.pyx"],
+                include_dirs = [incdir_src, incdir_build],
+                library_dirs = [libdir],
+                language = "C++",
+                libraries = ["stdc++", "LHAPDF"])
+
+setup(name = "LHAPDF",
+      version = "@PACKAGE_VERSION@",
+      cmdclass = {"build_ext": build_ext},
+      ext_modules = [ext])
